Fixed package title overflow

--- a/src/public/less/components/package-header.less
+++ b/src/public/less/components/package-header.less
@@ -14,6 +14,11 @@
 		margin: 0 0 10px;
 	}
 
+	.package-name-wrapper {
+		text-overflow: ellipsis;
+		overflow: hidden;
+	}
+
 	.package-owner {
 		color: @text-color;
 		font-size: 16px;
